# pr-sop

./: .gitignore  .prsop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  sql-guard-pre.prsop.yml  sql-guard.prsop.yml
pr_sop/: __init__.py  cli.py  config.py  engine.py  reporters.py
pr_sop/checks/: __init__.py  base.py  changelog_required.py  precommit_rev_matches.py  version_consistency.py
tests/: test_changelog_required.py  test_config.py  test_precommit_rev_matches.py  test_version_consistency.py
